<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:onClick="toTransmitActivity"/>

    <TextView
        android:id="@+id/text2"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:layout_marginStart="350dp"/>


    <ListView
        android:layout_marginTop="20dp"
        android:layout_below="@id/text2"
        android:id="@+id/controller_list_view"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_marginBottom="10dp">

    </ListView>
    <Button
        android:text="@string/app_name"
        android:id="@+id/transmit"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="click"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="toAddActivity"
        app:srcCompat="@drawable/ic_action_add" />


</RelativeLayout>